# object.gay

./: .gitignore  Dockerfile  README.md  app.py  cdk.json  cdktf.json  compose.override.yml  noxfile.py  pyproject.toml
.github/workflows/: deploy.yml
codedeploy/: appspec.yml  compose.override.yml  compose.yml  object.gay.conf  pm2.config.js
codedeploy/hooks/: after-install.sh  application-start.sh  application-stop.sh
codedeploy/scripts/aws/: after-install.sh  application-start.sh  application-stop.sh  validate-service.sh
codedeploy/scripts/pm2/: run.sh
codedeploy/zipline/public/: site.webmanifest
src/_infra/: stack.py
src/_infra/aws/: __main__.py  stack.py
src/_infra/terraform/: __main__.py  stack.py
src/object_gay/: app.py  health_check.py
src/object_gay/api/: app.py  zipline.py
src/object_gay/subdomains/: get.py
src/object_gay/utils/: __init__.py  apps.py  config.py  http_client.py  logging.py  types.py
